Added (blank) pages

--- a/about.html
+++ b/about.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina Yan</title>
+	<title>Regina | About</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
 </head>
-
-
 <body>
 <header>
 	<div class="container">
@@ -18,15 +16,11 @@
 				<li><a href="illustration.html" class="unselected">Illustration</a></li>
 				<li><a href="branding.html" class="unselected">Branding</a></li>
 				<li><a href="misc.html" class="unselected">Misc</a></li>
-				<li><a href="about.html" class="unselected">About</a></li>
+				<li><a href="about.html">About</a></li>
 			</ul>
 		</nav>
 	</div>
 	
 </header>
-
 </body>
-
-
-
 </html>
