--- a/uiux.html
+++ b/uiux.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina Yan</title>
+	<title>Regina | About</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
 </head>
 
-
 <body>
-<header>
+	<header>
 	<div class="container">
 		<h1 class="logo"><a href="index.html">Regina Yan</a></h1>
 		<nav>
 			<ul>
 				<li><a href="designthinking.html" class="unselected">Design Thinking</a></li>
-				<li><a href="uiux.html" class="unselected">UI/UX</a></li>
+				<li><a href="uiux.html">UI/UX</a></li>
 				<li><a href="illustration.html" class="unselected">Illustration</a></li>
 				<li><a href="branding.html" class="unselected">Branding</a></li>
 				<li><a href="misc.html" class="unselected">Misc</a></li>
@@ -24,9 +23,5 @@
 	</div>
 	
 </header>
-
 </body>
-
-
-
 </html>
