--- a/branding.html
+++ b/branding.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina Yan</title>
+	<title>Regina | Branding</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
 </head>
-
-
 <body>
-<header>
+	<header>
 	<div class="container">
 		<h1 class="logo"><a href="index.html">Regina Yan</a></h1>
 		<nav>
@@ -16,7 +14,7 @@
 				<li><a href="designthinking.html" class="unselected">Design Thinking</a></li>
 				<li><a href="uiux.html" class="unselected">UI/UX</a></li>
 				<li><a href="illustration.html" class="unselected">Illustration</a></li>
-				<li><a href="branding.html" class="unselected">Branding</a></li>
+				<li><a href="branding.html">Branding</a></li>
 				<li><a href="misc.html" class="unselected">Misc</a></li>
 				<li><a href="about.html" class="unselected">About</a></li>
 			</ul>
@@ -24,9 +22,5 @@
 	</div>
 	
 </header>
-
 </body>
-
-
-
 </html>
