Content and Styling
Wrote "About" page, wrote most of "Design Thinking" page, added logos and general styling

--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
 <body>
 <header>
 	<div class="container">
-		<h1 class="logo"><a href="index.html">Regina Yan</a></h1>
+		<h1 class="logo"><a href="index.html"><img src="assets/reginaLogo.png" alt="Regina Yan" style= "height:45.2px; width:210px;"></a>
+		</h1>
 		<nav>
 			<ul>
 				<li><a href="designthinking.html" class="unselected">Design Thinking</a></li>
@@ -20,7 +21,44 @@
 			</ul>
 		</nav>
 	</div>
-	
 </header>
+
+<div class="container_about">
+	<img src="assets/profilephotoblock.png" alt="Profile Photo" style="height: 300px; width: 400px;">
+	<p>empathetic, resilient, goofy</p>
+	<p>Those aren't just three random words, they're the words my friends would use to describe me... and I think they're right! Much of who I am is based on my love for understanding people, my grit and determination to learn  anything I set my mind to, and my light-hearted, silly attitude towards life. </p>
+	<p>I also don't normally look like I do in that image - I like the photo though, that's why it's there. It's from my climbing expedition in South Africa, and if you look closely, I have a slight black eye from getting thwacked by a bush. Anyways, outside of suffering mini injuries from sport climbing, I am a figure skater, dad joke generator, lover of the outdoors, and dedicated journal-er. Oh, and an aspiring designer!</p>
+	<p>I started designing my freshman year at Dartmouth College, where I am currently a rising senior (scary!) studying <b>Engineering</b> and <b>Studio Art</b> with a minor in <b>Human-Centered Design</b>. I'm self-taught, but that doesn't mean I haven't learned plenty of lessons from my experiences creating designs and working at Dartmouth's DALI (Digital Arts Leadership Initiative) Lab. I have found that I'm primarily interested in <b>product and UI/UX design</b> and am inspired by solutions that positively impact our community and environment. I am so thankful for all the opportunities I have had and cannot wait for what's down the road. Thanks for taking the time to look at my portfolio, and please let me know if you have any feedback!</p>
+	<br>
+	<br>
+	<div class="container_aboutCourses">
+		<p>RELEVANT COURSES</p>
+		<ul>
+			<li class="courses">ENGS 12: Design Thinking, <em>received Citation of Excellence</em></li>
+			<li class="courses">ENGS 21: Intro to Engineering, <em>received Phillip R. Jackson award for Best Overall Project</em></li>
+			<li class="courses">ENGS 31: Digital Electronics</li>
+			<li class="courses">ENGS 33: Solid Mechanics</li>
+			<li class="courses">ENGS 37: Environmental Engineering</li>
+			<li class="courses">CS 01: Introduction to Programming and Computation (Python)</li>
+			<li class="courses">CS 10: Object-Oriented Programming (Java)</li>
+			<li class="courses">CS 22: 3D Digital Modeling, <em>received Citation of Excellence</em></li>
+			<li class="courses">CS 24: Computer Animation</li>
+			<li class="courses">CS 27: Projects in Digital Arts, <em>received Citation of Excellence</em></li>
+			<li class="courses">CS 28: Advanced Projects in Digital Arts</li>
+			<li class="courses">SART 15: Drawing</li>
+			<li class="courses">SART 16: Sculpture</li>
+			<li class="courses">SART 17: Digital Drawing</li>
+			<li class="courses">SART 25: Painting</li>
+			<li class="courses">PSYC 21: Perception</li>
+			<li class="courses">PSYC 23: Social Psychology</li>
+		</ul>
+	</div>
+	<br>
+	<br>
+	<footer>
+		&copy; Regina Yan
+	</footer>
+</div>
+
 </body>
 </html>
