--- a/illustration.html
+++ b/illustration.html
@@ -8,7 +8,8 @@
 <body>
 	<header>
 	<div class="container">
-		<h1 class="logo"><a href="index.html">Regina Yan</a></h1>
+		<h1 class="logo"><a href="index.html"><img src="assets/reginaLogo.png" alt="Regina Yan" style= "height:45.2px; width:210px;"></a>
+		</h1>
 		<nav>
 			<ul>
 				<li><a href="designthinking.html" class="unselected">Design Thinking</a></li>
@@ -22,5 +23,10 @@
 	</div>
 	
 </header>
+
+<footer>
+	&copy; Regina Yan
+</footer>
+
 </body>
 </html>
