--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 <header>
 	<div class="container">
-		<h1 class="logo"><a href="index.html">Regina Yan</a></h1>
+		<h1 class="logo"><a href="index.html"><img src="assets/reginaLogo.png" alt="Regina Yan" style= "height:45.2px; width:210px;"></a>
+		</h1>
 		<nav>
 			<ul>
 				<li><a href="designthinking.html" class="unselected">Design Thinking</a></li>
@@ -22,8 +23,31 @@
 			</ul>
 		</nav>
 	</div>
-	
 </header>
+
+<div class="container_home">
+	<h1>
+		Hi, I'm Regina!
+	</h1>
+	<h2>
+		Tagline about myself
+	</h2>
+</div>
+<div class="container_featuredProjects">
+	<img src="assets/projecttile-08.png" style="height:300px; width:300px;">
+	<img src="assets/projecttile-09.png" style="height:300px; width:300px;">
+	<img src="assets/projecttile-10.png" style="height:300px; width:300px;">
+	<img src="assets/projecttile-11.png" style="height:300px; width:300px;">
+	<img src="assets/projecttile-12.png" style="height:300px; width:300px;">
+	<img src="assets/projecttile-13.png" style="height:300px; width:300px;">
+	<img src="assets/projecttile-14.png" style="height:300px; width:300px;">
+	<img src="assets/projecttile-15.png" style="height:300px; width:300px;">
+	<img src="assets/projecttile-16.png" style="height:300px; width:300px;">
+</div>
+
+<footer>
+	&copy; Regina Yan
+</footer>
 
 </body>
 
