added some images
added some images to design thinking, created tab headers

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 			<li class="courses">CS 22: 3D Digital Modeling, <em>received Citation of Excellence</em></li>
 			<li class="courses">CS 24: Computer Animation</li>
 			<li class="courses">CS 27: Projects in Digital Arts, <em>received Citation of Excellence</em></li>
-			<li class="courses">CS 28: Advanced Projects in Digital Arts</li>
+			<li class="courses">CS 28: Advanced Projects in Digital Arts, <em>Neukom Scholar for Computer Science</em></li>
 			<li class="courses">SART 15: Drawing</li>
 			<li class="courses">SART 16: Sculpture</li>
 			<li class="courses">SART 17: Digital Drawing</li>
