--- a/designthinking.html
+++ b/designthinking.html
@@ -4,6 +4,7 @@
 	<title>Regina | Design Thinking</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
+	<script src="script.js"></script>
 </head>
 
 <body>
@@ -27,9 +28,12 @@
 
 
 <div class="container_intro">
+	<video src="assets/designthinking.mp4" style="height: 216px; width: 288px;" autoplay loop></video> 
 	<p>I took a design thinking class my junior year where I learned and put design thinking methodology into practice, from user reserearch to prototyping. Here are some samples of the work I created.</p>
 </div>
-<div class="container_list">
+<br>
+<br>
+<!-- <div class="container_list">
 		<ul>
 			<li><a href="#debono">De Bono Squares</a></li>
 			<li><a href="#rollercoaster">Roller Coaster</a></li>
@@ -44,11 +48,153 @@
 			<li><a href="#impdart">Improving Dartmouth</a></li>
 		</ul>
 		
+</div> -->
+
+
+
+
+
+<div class="content_tab">
+
+
+<!-- Tab links -->
+<div class="tab">
+  <button class="tablinks" onclick="openProj(event, 'De Bono Squares')" id="defaultTab">De Bono Squares</button>
+  <button class="tablinks" onclick="openProj(event, 'Roller Coaster')">Roller Coaster</button>
+  <button class="tablinks" onclick="openProj(event, 'Reframe & Rethink')">Reframe & Rethink</button>
+  <button class="tablinks" onclick="openProj(event, 'Product Design')">Product Design</button>
+  <button class="tablinks" onclick="openProj(event, 'Digital Dreams')">Digital Dreams</button>
+  <button class="tablinks" onclick="openProj(event, 'Improve Dartmouth')">Improve Dartmouth</button>
+</div>
+
+<!-- Tab content -->
+<div id="De Bono Squares" class="tabcontent">
+  <h3>De Bono Squares</h3>
+  	<p><b>TIMELINE:</b> 2 days</p>
+	<p><b>SKILLS:</b> Lateral Thinking</p>
+	<p> In our first assignment, we were tasked with creating patterns out of black squares. The only rules were 1) you have to make four identical pieces, and 2) the result must preserve the "essence" of a square.</p>
+	<p>I started out rather simplistic with the square cut into four squares (a horizontal and vertical cut) or four triangles (two diagonal cuts). Realizing that this was essentially an assignment in creating tesselations opened up new possibilities. As I continued on, I realized that we didn't have to use every bit of the paper - I just assumed we had to - and these insights continued to push the evolution of my squares. </p>
+	<p><b>TAKEAWAY:</b> Looking at things from different approaches can result in some cool "aha" moments - going forwards, I'll make sure to <b>question my assumptions</b> and <b>find creative ways to think about the task</b> rather than accepting the obvious as the only answer. You never know what might come out of seeing things in a new and unusual light!</p>
+</div>
+
+<div id="Roller Coaster" class="tabcontent">
+  <h3>Roller Coaster</h3>
+  	<p><b>TIMELINE:</b> 1 week</p>
+	<p><b>SKILLS:</b> Foamcore, Construction, Teamwork, and a whole lotta Patience</p>
+	<p>Imagine you work for a company that creates conceptual models for wild roller coaster rides. A new park opened up, and they want the coolest ride every -- no need to worry about insurance, you can add all the jumps and tricks you want! What would you create?</p>
+	<p>Well, my group of four decided to create "Secrets of the Sea", a ride featuring mythological creatures and terrifying tales. You begin in a capsizing pirate ship, ride the waves down through the Kraken's mouth, navigate the Bermuda Triangle, travel through the River Styx, surface through a fish, find hidden treasure, and ultimately land among the Sirens</p>
+	<p><b>TAKEAWAY:</b> From this project, I learned how to <b>effectively and rapidly prototype</b>. So oftern I have ideas that I spend hours refining, but honestly sometimes you just have to stop thinking and start doing! I also learned some soft skills such as <b>working well with others</b> -- it takes some understanding and proper mindset to <b>turn a "group" into a "team"</b>, and we accomplished that by sacrificing individual needs (like time) for the betterment of the team. Ultimately, that meant we finished building quickly, created something we were all proud of, and did not have to pull the dreaded all-nighter that this project is known for!</p>
+	<p>Bonus takeaway: I learned that I need remember to record a video of my future kinetic creations since I realized I forgot to do that here...</p>
+</div>
+
+<div id="Reframe & Rethink" class="tabcontent">
+  <h3>Reframe & Rethink</h3>
+  	<p><b>TIMELINE:</b> 1 week</p>
+	<p><b>SKILLS:</b> Reframing, Photoshop</p>
+	<p>Memes are images, video, text, etc. representing behaviors or values that are prevalent in our society. For this assignment, we chose one meme that bothered us and reframed the meme to encourage a shift in mindset.</p>
+	<p>
+		I reframed the meme F.O.G.A., or the "Fear of Going Alone". It's something I see everywhere, especially with millenials - we are scared of (being seen) doing things alone because it's "not cool" - too many times my friends will eat dinner in their rooms because they couldn't find someone to grab a meal with, or they won't attend an event that interests them because they did not want to go by themselves.
+	</p>
+	<p>
+		This past winter, I was interning in Boston and was all alone for three months. Sure I had some contacts in the city, but with everyone's busy schedules, I often found myself on my own... and I had an absolute blast. I explored the city, attended public events, signed up for classes, and learned so much about myself as a person. These experiences provide the inspiration for this series of posters where I photoshopped myself into various situations I encountered where F.O.G.A. can occur.
+	</p>
+	<p>
+		I'm not saying you should do everything alone - it's great to hang out with friends! But what I am saying is that you shouldn't be afraid when you are alone. Take those moments as opportunities to cherish the peaceful quietness, to fully be yourself and do whatever you want whenever you want, and to realize that <em>hey, you make great company.</em>
+	</p>
+	<div style="text-align: center">
+		<img src="assets/foga03.jpg" style="width: 510px; height:330px">
+		<img src="assets/foga04.jpg" style="width: 510px; height:330px">
+		<img src="assets/foga05.jpg" style="width: 510px; height:330px">
+	</div>
+
+	<p><b>TAKEAWAY:</b> I really enjoyed digging into my own thoughts in the process of creating these posters. In a meta way, this project helped me realize a lot about myself and why I cut back on social media... I guess I could create a series about F.O.M.O, the "Fear of Missing Out" as well! But overall, this project showed me <b>the power of reframing ideas</b>. In class, we saw many examples of change occuring just because someone explained or displayed things a new way, and that makes all the difference.</p>
+</div>
+
+<div id="Product Design" class="tabcontent">
+  <h3>Product Design</h3>
+ 	<p><b>TIMELINE:</b> 1 week</p>
+	<p><b>SKILLS:</b> Observational Research, Needfinding, Prototyping, Iterating</p>
+	<p> For this project, we were tasked with creating a device to help Dartmouth students better manage the things they need to carry with them. I worked in a team of three, and each of us observed our potential users for three hours to have a general idea of students' needs.</p>
+	<p>We assembled our insights and ideas, and found the issue of students dropping items in class due to lack of desk space (often no desk space at all) to be a common and compelling problem. One student in particular, Grace, had to juggle her laptop, assignments, notebook, water bottle and pens all on a tiny swing-out board near her seat, and she never got through class without items rolling off. </p>
+	<div class="container_video">
+		<iframe width="640" height="360" src="https://www.youtube.com/embed/DeD8hs--VnA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	</div>
+	<p>From our point of view, we decided to create a laptop case with a slide-out table and pockets to include other materials. Below are photos of our foamcore prototype.</p>
+	<div style="text-align: center; display: inline-block">
+		<img src="assets/foam1.jpeg" style="width: 403px; height:302px">
+		<img src="assets/foam2.jpeg" style="width: 403px; height:302px">
+	</div>
+	<p>After receiving feedback, we added and improved features and laser-cut the looks-like prototype</p>
+	<div style="text-align: center; display: inline-block">
+		<img src="assets/lapdesk-01.png" style="width: 338px; height:252px">
+		<img src="assets/lapdesk-02.png" style="width: 338px; height:252px">
+		<img src="assets/lapdesk-03.png" style="width: 338px; height:252px">
+		<img src="assets/lapdesk-04.png" style="width: 338px; height:252px">
+		<img src="assets/lapdesk-05.png" style="width: 338px; height:252px">
+		<img src="assets/lapdesk-06.png" style="width: 338px; height:252px">
+	</div>
+	<p><b>TAKEAWAY:</b> This was the first project where we had a user. I learned that <b>including the user throughout the process</b> is key to creating a product that he or she will actually use. Many features of our final prototype would not have existed without the input and feedback from users testing the product. For example, we added the paper holder on the bottom after realizing that our user still had to stuff papers into her backpack at she was running out of class.</p>
+</div>
+
+<div id="Digital Dreams" class="tabcontent">
+  <h3>Digital Dreams</h3>
+ 	<p><b>TIMELINE:</b> 1.5 weeks</p>
+	<p><b>SKILLS:</b> User Research, Interviewing, Needfinding, Prototyping, User interface, Filming, After Effects</p>
+	<p> We're in an incredible technological age with mindblowing advancements year after year. What will things look like in 2025? For this project, we worked in teams of three to create a futuristic product that would better the lives of individuals in education, recreation, or parenting.</p>
+	<p> My team chose recreation, and after creating a few mind maps, we decided to create something to improve experiences with travel. We then interviewed individuals to find their pain points to inform our direction.</p>
+	<p> A core problem we found was a two-fold situation. Individuals love sharing their experiences with others, but <b>the process of capturing an event can take away from the enjoyment of "being in the moment"</b>. On the other hand, people love seeing and reliving the experiences of their friends, but <b>following Snapchat stories can feel impersonal, and it's hard to convey the full experience through just sight and sound</b>.</p>
+	<p>We decided to tackle this problem with a product that would create a meaningful moment between those two individuals while sharing an experience. This is what we came up with: </p>
+	<div class="container_video">
+		<iframe width="640" height="360" src="https://www.youtube.com/embed/hSWupMssqQU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	</div>
+
+	<p>So why a postcard? Postcards are a timeless object present in cultures everywhere. They show care and attention, that your close friend thought about you while they were on their awesome vacation, wrote a special hand-written note, and sent it directly to you. They are treasured, tangible objects that immortalize memories. Plus, retro objects are the trend right now! But postcards also have limitations. They are static objects with generic stock photos that don't quite capture what you actually saw, so we integrated modern technology to create the BetterLetter.
+	</p>	
+	<p>The following images highlight key features of the postcard as well as the hands-free experience-capturing device.</p>
+	<div style="text-align: center; display: inline-block">
+		<img src="assets/specsAR-02.png" style="width: 400px; height:300px">
+		<img src="assets/specs-01.png" style="width: 400px; height:300px">
+		<img src="assets/specs-03.png" style="width: 400px; height:300px">
+	</div>
+	<p><b>TAKEAWAY:</b> I had an absolute blast with this project. I really loved creating the prototype and filming/editing the footage (and learning how to user After Effects in the process). The real takeaway, however, came with nailing the need and the "so what" aspect of the project. My team became so caught up in the futuristic aspect of the project that we lost track of why we were creating something in the first place. By <b>refining our need</b>, we were able to direct all of our decision-making and turn this project from something that looked cool to <b>something that mattered</b>.</p>
+</div>
+
+<div id="Improve Dartmouth" class="tabcontent">
+  <h3>Improve Dartmouth</h3>
+  	<p><b>TIMELINE:</b> 2 weeks</p>
+	<p><b>SKILLS:</b> User Research, Interviewing, Empathizing, Needfinding, Ideating, Prototyping, Testing, Interating, Presenting</p>
+	<p> Time to put it all together. My team was assigned the topic of improving "Dartmouth Traditions", a key aspect of our school's identity.</p>
+	<p><b>IDENTIFYING NEEDS FROM INTERVIEWS</b></p>
+	<p>From our 21 interviews of students, alumni and faculty, we heard: </p>
+
+	<div class="interviews">
+		<p>"Freshman year i seriously considered transferring because I never found a community"</p>
+		<p><b>Insight:</b> First-years often struggle to find community, which affects their happiness and sense of belonging at Dartmouth.</p>
+		<p>"It's so nice to be given the chance to explicitly think about my experiences becuase it's not immediately obvious what was actually meaningful" (in addition, interviews lasted an average of 25 minutes each even though the individuals initially said they were available for 5-10 minutes)</p>
+		<p><b>Insight:</b> People truly want to slow down and reflect on their Dartmouth experiences, but do not take the time to do so</p>
+		<p>"It's easy to feel very clueless, especially with all the lingo and obscure traditions. At first you feel so out of it like it's a new language to learn"</p>
+		<p><b>Insight:</b> Dartmouth traditions are so central to its identity that it creates a barrier that leaves first-years feeling isolated until they uncover the "cultural key"</p>
+		<p>"The smaller things that aren't the 'big weekends' like hiking Gile, chilling at Mink Brook, going to the rope swing, all of those little activities make up the Dartmouth experience"</p>
+		<p><b>Insight:</b> It's the small undercover experiences that create Dartmouth's unique culture</p>
+		<p>From our interviews, we also generated some maps that furthered our insights into students' needs regarding traditions</p>
+		<p>Ultimately, we structured our point of view around a <b>first-year student struggling to navigate the Dartmouth community</b></p>
+	</div>
+
+	<p><b>SPECIFICATIONS</b></p>
+	<p>We decided that a successful solution would help freshmen navigate their first year thoughtfully through <b>direction</b>, encourage meaningful interactions and mindfulness through <b>reflection</b>, sustain the energy and impact of events through <b>extension</b>, and ultimately build community through <b>connection.</b> </p>
+	<p><b>INNOVATION</b></p>
+	<p>We propose the <b>First-Year Guidebook</b> to help freshmen navigate and connect with people. It would include  prompts, and you could submit these stories and memories through the <b>Online Portal</b>, where they would be collected and assembled into an <b>Alumni Booklet</b> that would be given back to you during reunions. Below is a demonstration of what the experience would look like</p>
+</div>
+
 </div>
 
 
 
-<div id="debono">
+
+
+
+
+<!-- <div id="debono">
 	<img src="assets/debono.png" alt="De Bono Squares" style="height:45.2px; width:270px;">
 </div>
 <div class="project_desc">
@@ -153,8 +299,11 @@
 	<p><b>INNOVATION</b></p>
 	<p>We propose the <b>First-Year Guidebook</b> to help freshmen navigate and connect with people. It would include  prompts, and you could submit these stories and memories through the <b>Online Portal</b>, where they would be collected and assembled into an <b>Alumni Booklet</b> that would be given back to you during reunions. Below is a demonstration of what the experience would look like</p>
 
-</div>
-
+</div> -->
+<br>
+<br>
+<br>
+<br>
 <footer>
 	&copy; Regina Yan
 </footer>
