added photo tiles
added photo tiles without description links

--- a/branding.html
+++ b/branding.html
@@ -25,6 +25,20 @@
 </header>
 
 
+<div class="container_featuredProjects">
+	<img class="tile" src="assets/projecttile-40.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-29.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-31.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-27.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-28.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-32.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-33.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-34.png" style="height:300px; width:300px;">
+	
+</div>
+
+
+
 <footer>
 	&copy; Regina Yan
 </footer>
