--- a/misc.html
+++ b/misc.html
@@ -24,6 +24,18 @@
 	
 </header>
 
+<div class="container_featuredProjects">
+	<img class="tile" src="assets/projecttile-13.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-35.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-36.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-37.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-38.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-39.png" style="height:300px; width:300px;">
+
+</div>
+
+
+
 <footer>
 	&copy; Regina Yan
 </footer>
