--- a/uiux.html
+++ b/uiux.html
@@ -25,6 +25,15 @@
 	
 </header>
 
+<div class="container_featuredProjects">
+	<img class="tile" src="assets/projecttile-43.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-44.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-45.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-41.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-42.png" style="height:300px; width:300px;">
+</div>
+
+
 <footer>
 	&copy; Regina Yan
 </footer>
