--- a/illustration.html
+++ b/illustration.html
@@ -24,6 +24,24 @@
 	
 </header>
 
+<div class="container_featuredProjects">
+	<img class="tile" src="assets/projecttile-08.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-09.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-11.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-25.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-14.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-15.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-20.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-21.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-22.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-23.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-30.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-24.png" style="height:300px; width:300px;">
+	<img class="tile" src="assets/projecttile-26.png" style="height:300px; width:300px;">
+
+</div>
+
+
 <footer>
 	&copy; Regina Yan
 </footer>
