illustration design pages
Finished adding content to most of Illustration page designs, minor edits to About and Home page

--- a/branding.html
+++ b/branding.html
@@ -34,7 +34,7 @@
 	<img class="tile" src="assets/projecttile-32.png" style="height:300px; width:300px;">
 	<img class="tile" src="assets/projecttile-33.png" style="height:300px; width:300px;">
 	<img class="tile" src="assets/projecttile-34.png" style="height:300px; width:300px;">
-	
+	<img class="tile" src="assets/projecttile-47.png" style="height:300px; width:300px;">
 </div>
 
 
