--- a/illustration.html
+++ b/illustration.html
@@ -25,20 +25,23 @@
 </header>
 
 <div class="container_featuredProjects">
-	<img class="tile" src="assets/projecttile-08.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-09.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-11.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-25.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-14.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-15.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-20.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-21.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-22.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-23.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-30.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-24.png" style="height:300px; width:300px;">
+	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png" style="height:300px; width:300px;"></a>
+	<a href="projects/snowwars.html"><img class="tile" src="assets/projecttile-09.png" style="height:300px; width:300px;"></a>
+	<a href="projects/trips.html"><img class="tile" src="assets/projecttile-11.png" style="height:300px; width:300px;"></a>
+	<a href="projects/iceposter.html"><img class="tile" src="assets/projecttile-25.png" style="height:300px; width:300px;"></a>
+	<a href="projects/brewhaha.html"><img class="tile" src="assets/projecttile-14.png" style="height:300px; width:300px;"></a>
+	<a href="projects/campdart.html"><img class="tile" src="assets/projecttile-15.png" style="height:300px; width:300px;"></a>
+	<a href="projects/cabaret.html"><img class="tile" src="assets/projecttile-49.png" style="height:300px; width:300px;"></a>
+	<a href="projects/apologia.html"><img class="tile" src="assets/projecttile-50.png" style="height:300px; width:300px;"></a>
+	<a href="projects/vox.html"><img class="tile" src="assets/projecttile-46.png" style="height:300px; width:300px;"></a>
+	<a href="projects/lunarnewyear.html"><img class="tile" src="assets/projecttile-21.png" style="height:300px; width:300px;"></a>
+	<a href="projects/climbingteam.html"><img class="tile" src="assets/projecttile-22.png" style="height:300px; width:300px;"></a>
+	<a href="projects/dog.html"><img class="tile" src="assets/projecttile-23.png" style="height:300px; width:300px;"></a>
+	<a href="projects/grafficity.html"><img class="tile" src="assets/projecttile-48.png" style="height:300px; width:300px;"></a>
+	<a href="projects/thefifty.html"><img class="tile" src="assets/projecttile-30.png" style="height:300px; width:300px;"></a>
+	<a href="projects/provost.html"><img class="tile" src="assets/projecttile-24.png" style="height:300px; width:300px;"></a>
 	<img class="tile" src="assets/projecttile-26.png" style="height:300px; width:300px;">
-
+	
 </div>
 
 
