--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		Hi, I'm Regina!
 	</h1>
 	<h2>
-		Tagline about myself
+		Welcome to my portfolio site
 	</h2>
 </div>
 <div class="container_featuredProjects">
