color change, page updates
added some content to branding and UI/UX pages, changed color scheme to blue

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 </header>
 
 <div class="container_about">
-	<img src="assets/profilephotoblock.png" alt="Profile Photo" style="height: 300px; width: 400px;">
+	<img src="assets/profpic.png" alt="Profile Photo" style="height: 350px; width: 420px;">
 	<p>empathetic, resilient, goofy</p>
 	<p>Much of who I am is based on my love for understanding people, my grit and determination to learn anything I set my mind to, and my light-hearted, silly attitude towards life. </p>
 	<p>I also don't normally look like I do in that image - I like the photo though, that's why it's there. It's from my climbing expedition in South Africa, and if you look closely, I have a slight black eye from getting thwacked by a bush. Anyways, outside of suffering mini injuries from sport climbing, I am a figure skater, dad joke generator, lover of the outdoors, dedicated journal-er, and aspiring designer!</p>
