--- a/branding.html
+++ b/branding.html
@@ -27,14 +27,15 @@
 
 <div class="container_featuredProjects">
 	<img class="tile" src="assets/projecttile-40.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-29.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-31.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-27.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-28.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-32.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-33.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-34.png" style="height:300px; width:300px;">
-	<img class="tile" src="assets/projecttile-47.png" style="height:300px; width:300px;">
+	<a href="projects/dmc.html"><img class="tile" src="assets/projecttile-29.png" style="height:300px; width:300px;"></a>
+	<a href="projects/sdc.html"><img class="tile" src="assets/projecttile-31.png" style="height:300px; width:300px;"></a>
+	<a href="projects/earthweek.html"><img class="tile" src="assets/earthweeklogo.png" style="height:300px; width:300px;"></a>
+	<a href="projects/bgd.html"><img class="tile" src="assets/projecttile-27.png" style="height:300px; width:300px;"></a>
+	<a href="projects/wiw.html"><img class="tile" src="assets/projecttile-28.png" style="height:300px; width:300px;"></a>
+	<a href="projects/saam.html"><img class="tile" src="assets/projecttile-32.png" style="height:300px; width:300px;"></a>
+	<a href="projects/alianza.html"><img class="tile" src="assets/projecttile-33.png" style="height:300px; width:300px;"></a>
+	<a href="projects/doc.html"><img class="tile" src="assets/projecttile-34.png" style="height:300px; width:300px;"></a>
+	<!-- <img class="tile" src="assets/projecttile-47.png" style="height:300px; width:300px;"> -->
 </div>
 
 
