--- a/illustration.html
+++ b/illustration.html
@@ -40,7 +40,7 @@
 	<a href="projects/grafficity.html"><img class="tile" src="assets/projecttile-48.png" style="height:300px; width:300px;"></a>
 	<a href="projects/thefifty.html"><img class="tile" src="assets/projecttile-30.png" style="height:300px; width:300px;"></a>
 	<a href="projects/provost.html"><img class="tile" src="assets/projecttile-24.png" style="height:300px; width:300px;"></a>
-	<img class="tile" src="assets/projecttile-26.png" style="height:300px; width:300px;">
+	<!-- <img class="tile" src="assets/projecttile-26.png" style="height:300px; width:300px;"> -->
 	
 </div>
 
