--- a/uiux.html
+++ b/uiux.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | About</title>
+	<title>Regina | UI/UX</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
 </head>
@@ -26,7 +26,7 @@
 </header>
 
 <div class="container_featuredProjects">
-	<img class="tile" src="assets/projecttile-43.png" style="height:300px; width:300px;">
+	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png" style="height:300px; width:300px;"></a>
 	<img class="tile" src="assets/projecttile-44.png" style="height:300px; width:300px;">
 	<img class="tile" src="assets/projecttile-45.png" style="height:300px; width:300px;">
 	<img class="tile" src="assets/projecttile-41.png" style="height:300px; width:300px;">
