--- a/designthinking.html
+++ b/designthinking.html
@@ -172,7 +172,13 @@
 	<p><b>SPECIFICATIONS</b></p>
 	<p>We decided that a successful solution would help freshmen navigate their first year thoughtfully through <b>direction</b>, encourage meaningful interactions and mindfulness through <b>reflection</b>, sustain the energy and impact of events through <b>extension</b>, and ultimately build community through <b>connection.</b> </p>
 	<p><b>INNOVATION</b></p>
-	<p>We propose the <b>First-Year Guidebook</b> to help freshmen navigate and connect with people. It would include  prompts, and you could submit these stories and memories through the <b>Online Portal</b>, where they would be collected and assembled into an <b>Alumni Booklet</b> that would be given back to you during reunions. Below is a demonstration of what the experience would look like</p>
+	<div style="text-align: center;">
+		<img src="assets/FYG.gif" style="width: 480px; height:300px">
+	</div>
+	<p>We propose the <b>First-Year Guidebook</b> to help freshmen navigate and connect with people. It would include  prompts, and you could submit these stories and memories through the <b>Online Portal</b>, where they would be collected and assembled into an <b>Alumni Booklet</b> that would be given back to you during reunions. Below is a demonstration of what the experience would look like:</p>
+	<div class="container_video">
+		<iframe width="640" height="360" src="https://www.youtube.com/embed/e--HYqJCV_8?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	</div>
 </div>
 
 </div>
